# atdata

./: .atdata-ecosystem.json  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  architecture-decisions.md  development-history.md  ecosystem-coordination-workplan.md  ecosystem-coordination.md  index.md  justfile  locks.json  open-work-context.md  pyproject.toml  qa-architectural-review.md
.bench/: io.json  query.json  s3.json
.benchmarks/: .gitignore
.chainlink/: issues.db
.chainlink-review/: 26.md  33.md  681.md
.claude/: settings.json
.crosslink/: hook-config.json
.githooks/: pre-commit  pre-merge-commit
.review/: human-review.md
benchmarks/: bench_atmosphere.py  bench_dataset_io.py  bench_index_providers.py  bench_query.py  conftest.py
checkpoint/: state.json
dev/: build_docs.py  docs
docs/: atmosphere.md  index.html  robots.txt  search.json  sitemap.xml
docs_src/: _quarto.yml  index.qmd  objects.json
examples/: atmosphere_demo.py  local_workflow.py  promote_workflow.py
heartbeats/: 1wJG.json  SN7C.json  WomH.json  maxine--futura.json
issues/: 6710a3c5-4e6a-458f-a432-14a169d1668c.json
lexicons/: ac.foundation.dataset.arrayFormat.json  ac.foundation.dataset.entry.json  ac.foundation.dataset.getLatestSchema.json  ac.foundation.dataset.lens.json  ac.foundation.dataset.record.json  ac.foundation.dataset.schema.json  ac.foundation.dataset.schemaType.json  ac.foundation.dataset.storageBlobs.json  ac.foundation.dataset.storageExternal.json  ac.foundation.dataset.storageHttp.json  ac.foundation.dataset.storageS3.json  dataframe_shim.json  (+6 more)
(+501 files in other folders)
