[project]
name = "atdata"
version = "0.1.3b4"
description = "A loose federation of distributed, typed datasets"
readme = "README.md"
authors = [
    { name = "Maxine Levesque", email = "hello@maxine.science" }
]
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "msgpack>=1.1.2",
    "numpy>=2.3.4",
    "ormsgpack>=1.11.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis-om>=0.3.5",
    "s3fs>=2025.12.0",
    "schemamodels>=0.9.1",
    "tqdm>=4.67.1",
    "webdataset>=1.0.2",
]

[project.scripts]
atdata = "atdata:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=atdata --cov-report=html"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "moto[s3]>=5.0.29",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
